Fixed z-index issue

--- a/web-app/src/sass/_CardExplorer.scss
+++ b/web-app/src/sass/_CardExplorer.scss
@@ -43,9 +43,6 @@
             // wider
             width: 90vw;
 
-            // get behind navbar
-            z-index: -10;
-
             // smaller card images
             .card-image img {
                 max-height: 100px !important;
